--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
               I enjoy building things with code.
             </p>
           </div>
-          <div class = "icons">
-            <div class = "hIcon">
+          <div class = "icons" id = "ig">
+            <a target = "_blank" href = "https://www.instagram.com/nick.debaise/" class = "hIcon">
               <span style="font-size: 26px; color: #fff;">
                 <i class="fa fa-instagram"></i>
               </span>
               <p>Instagram</p>
-            </div>
+            </a>
 
-            <div class = "hIcon">
+            <a  target = "_blank" href = "https://github.com/nickdebaise" class = "hIcon" id = "git">
               <span style="font-size: 26px; color: #fff;">
                 <i class="fa fa-github"></i>
               </span>
               <p>Github</p>
-            </div>
+            </a>
 
-            <div class = "hIcon">
+            <a href="mailto:nicholasdeb@icloud.com" target="_top" class = "hIcon" id = "email">
               <span style="font-size: 26px; color: #fff;">
                 <i class="fa fa-envelope"></i>
               </span>
               <p>Email</p>
-            </div>
+            </a>
           </div>
         </div>
       </div>
