--- a/jotter-details.html
+++ b/jotter-details.html
@@ -59,7 +59,7 @@
             <ul>
               <li><strong>Category</strong>: App Development</li>
               <li><strong>Project date</strong>: Launched June of 2020</li>
-              <li><strong>View on Apple App Store</strong>: <a href="#">No current link</a></li>
+              <li><strong>View on Apple App Store</strong>: <a href="https://apps.apple.com/us/app/jot-organize-your-ideas/id1516539586?ls=1">Jot</a></li>
             </ul>
 
             <p>
